--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ dependencies:
   cupertino_icons: ^0.1.3
   english_words: ^3.1.5
   http: ^0.12.1
+  shared_preferences: ^0.5.8
+  fluttertoast: ^7.0.1
+  image_cropper: ^1.2.3
+  image_picker: ^0.6.7+4
+  geolocator: ^6.0.0+3
+  geocoding: ^1.0.3
 
 
 dev_dependencies:
